--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="app">hello world</div>
     <!-- built files will be auto injected -->
+    <script src="index.js"></script>
   </body>
 </html>
