--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>GitHublilei</title>
-  </head>
-  <body>
-    <div id="app">hello world</div>
-    <!-- built files will be auto injected -->
-    <script src="index.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><script charset=utf-8 src=/js/svg.js></script><title>insist</title><link href=/css/chunk-45e9d004.86eebdd3.css rel=prefetch><link href=/css/chunk-576e6b67.d1602e59.css rel=prefetch><link href=/css/chunk-77560d40.ae5a37d8.css rel=prefetch><link href=/js/about.b50df975.js rel=prefetch><link href=/js/chunk-45e9d004.2dc69535.js rel=prefetch><link href=/js/chunk-576e6b67.1c4cf739.js rel=prefetch><link href=/js/chunk-77560d40.7d179525.js rel=prefetch><link href=/css/app.51efc769.css rel=preload as=style><link href=/js/app.65fb3cde.js rel=preload as=script><link href=/js/chunk-vendors.635b6db1.js rel=preload as=script><link href=/css/app.51efc769.css rel=stylesheet></head><body><div id=app></div><script src=/js/chunk-vendors.635b6db1.js></script><script src=/js/app.65fb3cde.js></script></body></html>
